# ESP32_projects

esp32c3/Dormitory-IoT-door-lock-simple/: CMakeLists.txt
esp32c3/Dormitory-IoT-door-lock-simple/.cache/clangd/index/: bsp_sg90.c.69A72D39C8FDD4A1.idx  bsp_sg90.h.5EEBD7434EB7569F.idx  main.c.0A88423BC8C38CC3.idx
esp32c3/Dormitory-IoT-door-lock-simple/main/: CMakeLists.txt  bsp_sg90.c  bsp_sg90.h  main.c
esp32s3/esp32s3-microphone-speaker-master/: sdkconfig  sdkconfig.old
esp32s3/esp32s3-microphone-speaker-master/main/: CMakeLists.txt  i2s_test.c  idf_component.yml  main.c  main1.txt
esp32s3/esp32s3_hx8369/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  version.txt
esp32s3/esp32s3_hx8369/components/lvgl/src/: lv_conf_internal.h
esp32s3/esp32s3_hx8369/components/lvgl/src/font/: lv_font.h
esp32s3/esp32s3_hx8369/components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_helpers.h  lvgl_spi_conf.h
esp32s3/esp32s3_hx8369/components/lvgl_porting/: CMakeLists.txt  lv_port_disp.c  lv_port_disp.h  lv_task.c
esp32s3/esp32s3_hx8369/components/lvgl_porting/c/: lv_pingfang_sc_reg_20_c.c  lv_siyuan_bold_15_c.c  lv_siyuan_bold_20_c.c  lv_siyuan_bold_28_c.c  lv_siyuan_bold_30_c.c
esp32s3/esp32s3_hx8369/components/lvgl_porting/ttf/: 地址计算工具.xlsx
esp32s3/esp32s3_hx8369/main/: CMakeLists.txt  app_main.c  app_main.h
esp32s3/esp32s3_usb_camera_wifi/: README.md  sdkconfig  sdkconfig.old
esp32s3/esp32s3_usb_camera_wifi/components/xfer_http/: app_wifi.c
esp32s3/esp32s3_usb_camera_wifi/main/: CMakeLists.txt  main.c  wifi_stream.c
(+13 files in other folders)
